Small tweaks
-worked on paths along activities - now there's not the long animations between the three activities, and it returns properly from nutrition info to the main activity (it used to go back to today instead of using the old day). Includes compatibility fix for ICS
-fixed swipe refresh layout spinner - should display on all devices in same spot now
-launching main app from widget now overrides current activity date